--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
