--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.1.0",
+    "eslint": "^7.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react": "^7.20.6",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
