--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
     "@auth0/auth0-react": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "dotenv": "^8.2.0",
