--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001/",
-  "dependencies": {
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "nodemon": "^1.18.7",
+    "jest": "24.9.0"
+  },
+  "dependencies": {
     "@auth0/auth0-react": "^1.0.0",
     "axios": "^0.19.0",
     "cors": "^2.8.5",
