--- a/package.json
+++ b/package.json
@@ -28,16 +28,21 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "-": "0.0.1",
+    "@auth0/auth0-react": "^1.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@auth0/auth0-react": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.10.5",
     "mysql2": "^1.6.5",
+    "react-dom": "^16.13.1",
+    "save-dev": "0.0.1-security",
     "sequelize": "^5.8.9"
   }
 }
