--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "babel-jest": "^24.9.0",
     "concurrently": "^4.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.6.0",
@@ -24,7 +31,13 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.20.6",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "jest": "24.9.0",
+    "jest-canvas-mock": "^2.2.0",
+    "jest-transform-css": "^2.0.0",
+    "jest-transform-file": "^1.1.1",
+    "jsdom": "16.4.0",
+    "jsdom-global": "3.0.2"
   },
   "dependencies": {
     "-": "0.0.1",
