--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
+    "jest": "^26.4.2",
     "nodemon": "^1.18.7"
   },
   "dependencies": {
