--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@testing-library/jest-dom": "^4.2.4",
@@ -31,13 +32,13 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.20.6",
-    "nodemon": "^1.18.7",
     "jest": "24.9.0",
     "jest-canvas-mock": "^2.2.0",
     "jest-transform-css": "^2.0.0",
     "jest-transform-file": "^1.1.1",
     "jsdom": "16.4.0",
-    "jsdom-global": "3.0.2"
+    "jsdom-global": "3.0.2",
+    "nodemon": "^1.18.7"
   },
   "dependencies": {
     "-": "0.0.1",
