--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
   "dependencies": {
     "-": "0.0.1",
     "@auth0/auth0-react": "^1.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
