--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "babel-eslint": "^10.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
