--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-jest": "^24.9.0",
     "concurrently": "^4.1.0",
     "cross-env": "^7.0.2",
+    "enzyme": "^3.11.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.3",
@@ -52,9 +53,9 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "babel-eslint": "^10.0.1",
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
