--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "babel-eslint": "^10.0.1",
+    "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
@@ -60,6 +61,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.10.5",
     "mysql2": "^1.6.5",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "save-dev": "0.0.1-security",
     "sequelize": "^5.8.9"
