--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "@auth0/auth0-react": "^1.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.15.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "babel-eslint": "^10.0.1",
+    "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "enzyme": "^3.11.0",
@@ -60,6 +62,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.10.5",
     "mysql2": "^1.6.5",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "save-dev": "0.0.1-security",
     "sequelize": "^5.8.9"
