--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "-": "0.0.1",
     "@auth0/auth0-react": "^1.0.0",
     "@babel/core": "^7.11.6",
+    "@babel/polyfill": "^7.11.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
