--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.10.5",
     "mysql2": "^1.6.5",
+    "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "save-dev": "0.0.1-security",
