--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-autocomplete": "^1.8.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "save-dev": "0.0.1-security",
     "sequelize": "^5.8.9"
   },
